--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "bugs": {
       "url": "https://github.com/BlueBerrySans365/InstSUBUP/issues"
     },
+    "dependencies": {
+      "prompt": "^1.0.0",
+      "document": "^0.4.7"
+    },
     "homepage": "https://github.com/BlueBerrySans365/InstSUBUP"
   }
